// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummery correctly with 1 expense 1`] = `
<div
  className="page_header"
>
  <div
    className="content-container"
  >
    <h1
      className="page_header__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.35
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="big_button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseSummery correctly with multiple expenses 1`] = `
<div
  className="page_header"
>
  <div
    className="content-container"
  >
    <h1
      className="page_header__title"
    >
      Viewing 
      <span>
        23
      </span>
       
      expenses
       totalling 
      <span>
        $235,123,468.90
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="big_button"
        to="/create"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
